test/modules/vass/userInsteadOfStandard/foo2.good
warning: Ambiguous module source file -- using ./ChapelIO.chpl over $CHPL_HOME/modules/standard/ChapelIO.chpl
ChapelIO.chpl:11: In function 'serializeDefaultImpl':
ChapelIO.chpl:11: warning: need '(?)' on the type 'fileWriter' of the formal 'writer' because this type is generic
foo2.chpl:9: error: done
